Added main class to manifest and enhanced the regular expressions

--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,10 @@ test {
     useJUnitPlatform()
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'de.rkable.coverity.MetricAnalyzer'
+        )
+    }
+}
